# path-tracer

./: .gitignore  README.md
ray/: CMakeLists.txt  ray-solution  raycheck.py  sancheck.py
ray/assets/custom/: areaLight.json  custom.json  customNoNormalMap.json  customNormalMap.json  room.json  russianRouletteTest.json  spheres.json  spheresDirectional.json
ray/assets/pathTracer/: cornellBoxes.json  cornellBoxesRef  hitchcockBRDF.json  spheres.json  spheresDirectional.json
ray/assets/scenes/: cone.json  cylinder.json  easy2.json  hitchcock.json  reflection.json  reflection1.json  reflection2.json  scene.json  scene_blank.json  scene_mirror.json  sphere.json  sphere1.json  sphere_box.json  spheres.json  spheres1.json  spheres_test1.json  tentacles.json  trans.json
ray/assets/scenes-2/: box.json  box_png.json  texture_box.json  texture_box_png.json
ray/cmake/: glm.cmake
ray/src/: CMakeLists.txt  RayTracer.cpp  RayTracer.h  general.h  main.cpp
ray/src/SceneObjects/: Box.cpp  Box.h  Cone.cpp  Cone.h  Cylinder.cpp  Cylinder.h  Sphere.cpp  Sphere.h  Square.cpp  Square.h  trimesh.cpp  trimesh.h
ray/src/fileio/: bitmap.cpp  bitmap.h  buffer.cpp  buffer.h  images.cc  pngimage.cpp  pngimage.h
ray/src/libs/: tiny_obj_loader.h
ray/src/parser/: JsonParser.cpp  JsonParser.h  Parser.cpp  Parser.h  ParserException.cpp  ParserException.h  Token.cpp  Token.h  Tokenizer.cpp  Tokenizer.h  jsonformat.md
ray/src/scene/: BVH.cpp  BVH.h  bbox.cc  bbox.h  bvh.h  camera.cpp  camera.h  cubeMap.cpp  cubeMap.h  light.cpp  light.h  material.cpp  material.h  ray.cpp  ray.h  scene.h  (+1 more)
(+83 files in other folders)
